--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.linting.enabled": false,
-    "python.formatting.provider": "yapf",
-    "python.pythonPath": "C:\\Users\\mrile\\AppData\\Local\\Programs\\Python\\Python35\\python.exe"
+    "python.formatting.provider": "none",
+    "python.pythonPath": "/usr/bin/python3.5"
 }
